--- a/deploy/index.html
+++ b/deploy/index.html
@@ -1,5 +1,1 @@
-<li>
-    <a href="./Cookbook.html" target="_blank">
-        <p>resume</p>
-    </a>
-</li>
+<embed src="./MyCookbook.pdf" type="application/pdf" width=100% height=100% />
